--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,15 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+
+    <string name="back_button">Back</string>
+    <string name="banner_content_description">Banner Image</string>
+    <string name="user_profile_image">User Profile Image</string>
+    <string name="nom_utilisateur">Nom Utilisateur</string>
+    <string name="user_details">Développeur Fullstack - Entreprise\nMorocco, Kenitra</string>
+    <string name="modify_my_profile">Modifier mon profil</string>
+    <string name="share">Partager</string>
+    <string name="voir_le_cv">Voir le CV</string>
+    <string name="static_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio tortor, tincidunt in magna at, ultrices semper est. Mauris sem nulla, placerat nec pellentesque vitae, malesuada eget dolor. Donec pellentesque nulla ut quam maximus porttitor. Vestibulum pellentesque convallis facilisis.</string>
+    <string name="se_connecter">se connecter\n</string>
 </resources>
