--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,9 @@
     <string name="voir_le_cv">Voir le CV</string>
     <string name="static_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio tortor, tincidunt in magna at, ultrices semper est. Mauris sem nulla, placerat nec pellentesque vitae, malesuada eget dolor. Donec pellentesque nulla ut quam maximus porttitor. Vestibulum pellentesque convallis facilisis.</string>
     <string name="se_connecter">se connecter\n</string>
+    <string name="exp_rience_professionnelles">Expérience professionnelles</string>
+    <string name="experience_title">Développeur Fullstack</string>
+    <string name="experience_date">Sept 2022 - Present</string>
+    <string name="button_text">Modifer</string>
+    <string name="company_location">"Entreprise - Morocco, Kenitra "</string>
 </resources>
