Add screen and logic for adding skills

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="like">Like</string>
     <string name="comments">Comments</string>
+    <string name="expriences">Expèriences</string>
 
 
 </resources>
